[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/placeholder_32x32.png" type="Texture" id=2]
[ext_resource path="res://Assets/Placeholder.jpg" type="Texture" id=3]
[ext_resource path="res://Assets/healthboxplaceholder.png" type="Texture" id=4]
[ext_resource path="res://Assets/healthplaceholder.png.png" type="Texture" id=5]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 10.4782
height = 9.80283

[sub_resource type="CapsuleShape2D" id=2]

custom_solver_bias = 0.0
radius = 14.6332
height = 9.80283

[node name="Player" type="KinematicBody2D" index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )

[node name="PlayerSprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

visible = false
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="." index="2"]

anchor_mode = 1
rotating = false
current = false
zoom = Vector2( 0.7, 0.7 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = false
drag_margin_v_enabled = false
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false

[node name="Gun" type="Sprite" parent="." index="3"]

modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 0.2, 0.784779 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Reload" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="Area2D" type="Area2D" parent="." index="5"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]

shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="InvincibilityFrames" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = false

[node name="UI" type="CanvasLayer" parent="." index="7"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="Health" type="TextureProgress" parent="UI" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 460.0
margin_top = 250.0
margin_right = 844.0
margin_bottom = 314.0
rect_scale = Vector2( 0.25, 0.25 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 6.0
step = 1.0
page = 0.0
value = 1.0
exp_edit = false
rounded = true
texture_under = ExtResource( 4 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 5 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Rect", "Textures" ]

[connection signal="timeout" from="Reload" to="." method="_on_Reload_timeout"]


